--- a/_posts/2020-12-12-CTB-LHP.md
+++ b/_posts/2020-12-12-CTB-LHP.md
@@ -1,9 +1,9 @@
 ---
 layout: post
-tags: [tản_mạn, ndnt]
+tags: [tản_mạn]
 title: Đôi điều về buổi trao học bổng Chuyên Thái Bình và Chuyên Lê Hồng Phong vừa rồi
 ---
 
-Do tính năng viết note trên Facebook bị lỗi nên cũng đến lúc mình phải dùng đến cái này :))). (nó đã để mốc meo tầm 2 năm rồi)
+_Do tính năng viết note trên Facebook bị gỡ nên cũng đến lúc mình phải dùng đến cái này :))). (nó đã để mốc meo tầm 2 năm rồi)_
 
-Coming soon.
+Hello world, once again.
