--- a/_posts/2020-12-12-CTB-LHP.md
+++ b/_posts/2020-12-12-CTB-LHP.md
@@ -1,7 +1,8 @@
 ---
 layout: post
 tags: [tản_mạn]
-title: Đôi điều về buổi trao học bổng Chuyên Thái Bình và Chuyên Lê Hồng Phong vừa rồi
+title: Trao học bổng CTB-LHP 2020
+subtitle: Đôi điều về buổi trao học bổng Chuyên Thái Bình và Chuyên Lê Hồng Phong vừa rồi
 ---
 
 _Do tính năng viết note trên Facebook bị gỡ nên cũng đến lúc mình phải dùng đến cái này :))). (nó đã để mốc meo tầm 2 năm rồi)_
