Ongoing new post

--- a/_posts/2020-12-12-CTB-LHP.md
+++ b/_posts/2020-12-12-CTB-LHP.md
@@ -5,6 +5,22 @@ title: Trao học bổng CTB-LHP 2020
 subtitle: Đôi điều về buổi trao học bổng Chuyên Thái Bình và Chuyên Lê Hồng Phong vừa rồi
 ---
 
-_Do tính năng viết note trên Facebook bị gỡ nên cũng đến lúc mình phải dùng đến cái này :))). (nó đã để mốc meo tầm 2 năm rồi)_
+_Do tính năng viết note trên Facebook bị gỡ nên cũng đến lúc mình phải dùng đến cái này :))). (nó đã để mốc tầm 2 năm rồi)_
 
 Hello world, once again.
+
+Sau gần 3 tiếng setup lại Github Pages thì cuối cũng cũng đã đến lúc viết về buổi trao học bổng vừa rồi...
+
+## 0. Lịch trình và chuẩn bị
+
+## 1. Từ Hà Nội hay từ Thái Bình?
+
+## 2. Quyết định 30'
+
+## 3. Chuyên Thái Bình: Chủ nhà, cơ trưởng và giao lưu ẩm thực
+
+## 4. Nam Định: Chuyên LHP và bánh xíu páo
+
+## 5. Về Hà Nội
+
+
