New posttt incumingggg

--- a/_posts/2020-12-12-CTB-LHP.md
+++ b/_posts/2020-12-12-CTB-LHP.md
@@ -7,20 +7,30 @@ subtitle: Đôi điều về buổi trao học bổng Chuyên Thái Bình và Ch
 
 _Do tính năng viết note trên Facebook bị gỡ nên cũng đến lúc mình phải dùng đến cái này :))). (nó đã để mốc tầm 2 năm rồi)_
 
+
+<p align="center">
+  <img src="/img/2020-12-12/1.jpg">
+</p>
+
 Hello world, once again.
 
 Sau gần 3 tiếng setup lại Github Pages thì cuối cũng cũng đã đến lúc viết về buổi trao học bổng vừa rồi...
 
-## 0. Lịch trình và chuẩn bị
-
 ## 1. Từ Hà Nội hay từ Thái Bình?
 
-## 2. Quyết định 30'
+Ban đầu, theo lịch thì đoàn sẽ đi vào ngày 14/11, tuy nhiên do một số trục trặc thì chuyến đi bị hoãn đến ngày 12/12 - tức là gần 1 tháng sau đó. May mắn cho mình thì cả 2 buổi đều không bị trùng lịch học hoặc thi :)))
 
-## 3. Chuyên Thái Bình: Chủ nhà, cơ trưởng và giao lưu ẩm thực
+Rồi ngày này cũng đến. Tuy nhiên, sau khi biết xe chạy từ 101 Láng Hạ từ hơn 6h mà lại về Thái Bình trước vào hôm trước hôm trao học bổng 1 ngày thì mình đã phải đứng trước 2 lựa chọn:
 
-## 4. Nam Định: Chuyên LHP và bánh xíu páo
+- Một là, dậy sớm từ 4h30' sáng và 5h30' đạp đến 101 Láng Hạ - có thể tận dụng được ngày thứ 6 làm gì đó, đỡ tốn kém nhưng khá mệt và quãng đường đạp khá xa (xấp xỉ 4km).
+- Hai là, bắt xe về Thái Bình chiều trước rồi gặp đoàn ở CTB sáng hôm sau - có thêm thời gian ở CTB hơn, đỡ mệt hơn phương án 1 nhưng tốn kém và bị động khi di chuyển.
 
-## 5. Về Hà Nội
+Sau khi phân vân thì mình đã chọn phương án 2 dù những gì xảy ra sau đó không được trơn tru cho lắm :). Và quyết định này được đưa ra trong 10' ra chơi sau khi biết lịch đi =)))). Và thế là sau khi ăn trưa và học xong 3 tiết Giải tích hàm, mình bắt buýt và xe khách về quê =))))
+
+## 2. Chuyên Thái Bình: Tiền trạm, chủ nhà và cơ trưởng.
+
+## 3. Nam Định: Chuyên LHP và bánh xíu páo
+
+## 4. Về Hà Nội
 
 
