Ongoing new post

--- a/_posts/2020-12-12-CTB-LHP.md
+++ b/_posts/2020-12-12-CTB-LHP.md
@@ -10,9 +10,11 @@ _Do tính năng viết note trên Facebook bị gỡ nên cũng đến lúc mìn
 
 <p align="center">
   <img src="/img/2020-12-12/1.jpg">
+  <i> Chuyên Lê Hồng Phong, Panorama </i>
 </p>
 
-Hello world, once again.
+
+_Hello world, once again._
 
 Sau gần 3 tiếng setup lại Github Pages thì cuối cũng cũng đã đến lúc viết về buổi trao học bổng vừa rồi...
 
@@ -28,6 +30,12 @@ Rồi ngày này cũng đến. Tuy nhiên, sau khi biết xe chạy từ 101 Lá
 Sau khi phân vân thì mình đã chọn phương án 2 dù những gì xảy ra sau đó không được trơn tru cho lắm :). Và quyết định này được đưa ra trong 10' ra chơi sau khi biết lịch đi =)))). Và thế là sau khi ăn trưa và học xong 3 tiết Giải tích hàm, mình bắt buýt và xe khách về quê =))))
 
 ## 2. Chuyên Thái Bình: Tiền trạm, chủ nhà và cơ trưởng.
+
+<p align="center">
+    <iframe src="https://www.youtube.com/embed/y8MYENImt9c" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+</p>
+
+8h sáng hôm sau, mình ra trường và ping cho mọi người (lúc này đang trên đường về TB). Cũng khá may là ngoài mình còn có một em cũng xuất phát từ TB nên ít ra không phải một mình clutch trong trường trong khi chờ đoàn về =))).
 
 ## 3. Nam Định: Chuyên LHP và bánh xíu páo
 
