Ongoing new post

--- a/_posts/2020-12-12-CTB-LHP.md
+++ b/_posts/2020-12-12-CTB-LHP.md
@@ -32,7 +32,7 @@ Sau khi phân vân thì mình đã chọn phương án 2 dù những gì xảy r
 ## 2. Chuyên Thái Bình: Tiền trạm, chủ nhà và cơ trưởng.
 
 <p align="center">
-    <iframe src="https://www.youtube.com/embed/y8MYENImt9c" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+    <iframe width="727" height="409" src="https://www.youtube.com/embed/GHu2jvv5WdY" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 </p>
 
 8h sáng hôm sau, mình ra trường và ping cho mọi người (lúc này đang trên đường về TB). Cũng khá may là ngoài mình còn có một em cũng xuất phát từ TB nên ít ra không phải một mình clutch trong trường trong khi chờ đoàn về =))).
