Ongoing new post

--- a/_posts/2020-12-12-CTB-LHP.md
+++ b/_posts/2020-12-12-CTB-LHP.md
@@ -35,7 +35,14 @@ Sau khi phân vân thì mình đã chọn phương án 2 dù những gì xảy r
     <iframe width="727" height="409" src="https://www.youtube.com/embed/GHu2jvv5WdY" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 </p>
 
-8h sáng hôm sau, mình ra trường và ping cho mọi người (lúc này đang trên đường về TB). Cũng khá may là ngoài mình còn có một em cũng xuất phát từ TB nên ít ra không phải một mình clutch trong trường trong khi chờ đoàn về =))).
+8h sáng hôm sau, mình ra trường và ping cho mọi người (lúc này đang trên đường về TB). Cũng khá may là ngoài mình còn có một bạn cũng xuất phát từ TB nên ít ra không phải một mình lang thang trong trường trong khi chờ đoàn về =))).
+
+<p align="center">
+  <img src="/img/2020-12-12/2.jpg">
+  <i> "Bravo 1 in place." </i>
+</p>
+
+ 
 
 ## 3. Nam Định: Chuyên LHP và bánh xíu páo
 
